# ROB6

./: .gitignore  README.md
ArduinoReader/: ArduinoReader.cbp  ArduinoReader.depend  ArduinoReader.layout  main.cpp
ArduinoReader/include/: ArduinoSensorReader.h
ArduinoReader/src/: ArduinoSensorReader.cpp
IterativeAlgebraicFitting/: 3points1circle.py  algorithm1.py
IterativeAlgebraicFitting/FolderIteration/: algorithm1.py
IterativeAlgebraicFitting/Results/: Beton200_Result_Algorithm1.txt  dry_pvc_400_Result_Algorithm1.txt  dry_pvc_400_long_Result_Algorithm1.txt  dry_pvc_400_long_left_Result_Algorithm1.txt  dry_pvc_400_long_right_Result_Algorithm1.txt  plastic_bag_200_Result_Algorithm1.txt  wet_pvc_400_Result_Algorithm1.txt
IterativeAlgebraicFitting/preliminary_Results/: dry_pvc_400_long_Result_Algorithm1_2.txt  dry_pvc_400_long_low_Result_Algorithm1.txt  dry_pvc_500_Result_Algorithm1.txt
IterativeClosestPoint/: 200_distance_cloud-mesh.txt  ICP.py  cylinder.py
IterativeClosestPoint/CloudCompare/: Histogram.csv
LeastSquaresScript/: LeastSquareCylinderFit.py  Tester.py
LeastSquaresScript/ExposureResults/: results_LSCF_Sand_1.txt  results_LSCF_beton_200.txt  results_LSCF_dry_pvc_200.txt  results_LSCF_dry_pvc_400_long_center.txt  results_LSCF_water_5.txt  results_LSCF_wet_pvc_400_middle.txt  results_LSCF_wet_pvc_500_middle.txt
LeastSquaresScript/ResultsChanged/: results_LSCF_Sand_0.txt  results_LSCF_Sand_2.txt  results_LSCF_Sand_3.txt  results_LSCF_bag_lining_1.txt  results_LSCF_bag_on_side_1.txt  results_LSCF_bag_on_side_2.txt  results_LSCF_bag_on_side_far_1.txt  results_LSCF_bag_on_side_far_2.txt  results_LSCF_beton_200.txt  results_LSCF_dry_pvc_400_bottom_trash_bag.txt  results_LSCF_dry_pvc_400_bricks_bottom.txt  results_LSCF_dry_pvc_400_bricks_middle.txt  results_LSCF_dry_pvc_400_long_bottom.txt  results_LSCF_dry_pvc_400_middle_trash_bag.txt  results_LSCF_dry_pvc_400_paper_bottom.txt  results_LSCF_dry_pvc_400_paper_middle.txt  results_LSCF_dry_pvc_400_sonar.txt  results_LSCF_dry_pvc_500_bricks_middle.txt  results_LSCF_dry_pvc_500_middle.txt  results_LSCF_dry_pvc_500_middle_trashbag.txt  results_LSCF_dry_pvc_500_sonar.txt  results_LSCF_sand_3_upside_down.txt  results_LSCF_water_1.txt  results_LSCF_water_2.txt  results_LSCF_water_3.txt  results_LSCF_water_4.txt  results_LSCF_water_5.txt  results_LSCF_water_6.txt  results_LSCF_waterremnants_1.txt  results_LSCF_wet_pvc_200.txt  (+8 more)
MPU6050_DMP6_using_DMP_V6.12/: MPU6050_DMP6_using_DMP_V6.12.ino
PCL_ransac/: CMakeLists.txt  PCL_ransac.cpp
PCL_ransac/Debug/: PCL_project.ilk  vc141.idb
PCL_ransac/Debug/PCL_project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PCL_project.lastbuildstate  PCL_project.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PCL_ransac/Release/PCL_project.tlog/: PCL_project.lastbuildstate
PCL_ransac/x64/Debug/: PCL_project.exp  vc141.idb
PCL_ransac/x64/Debug/PCL_project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PCL_project.lastbuildstate  PCL_project.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PCL_ransac/x64/Release/: PCL_project.exp  PCL_project.ipdb  PCL_project.lib  pico_recorder.exp  pico_recorder.iobj  pico_recorder.ipdb  pico_recorder.lib
PCL_ransac/x64/Release/PCL_project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PCL_project.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
Pipe Fitting eigen/: arrow.py  main.py
PipeAI/: Main.py  saved_model.pb
ThePackage/: CMakeLists.txt
ThePackage/include/royale/: ModuleConfigData.hpp
ThePackage/src/: main.cpp
exposure_result_sheets/: Algorithm1.ods  ICP.ods  LeastSquares.ods  LeastSquaresRansacVsLSC.ods  RANSAC.ods
k01myfirsttask/: k01myfirsttask.ino
pico_recorder/: CMakeLists.txt  pico_recorder.cpp
pico_recorder/include/: ArduinoSensorReader.h
pico_recorder/include/royale/: FilterLevel.hpp
pico_recorder/src/: ArduinoSensorReader.cpp  pico_recorder.cpp  transform.cpp
pico_recorder/x64/Release/: pico_recorder.exp  pico_recorder.iobj  pico_recorder.ipdb
pico_recorder/x64/Release/pico_recorder.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  pico_recorder.lastbuildstate  pico_recorder.write.1u.tlog
pico_recorder_no_arduino/: CMakeLists.txt
pico_recorder_no_arduino/include/: transform.h
pico_recorder_no_arduino/include/royale/: ProcessingFlag.hpp
pico_recorder_no_arduino/src/: pico_recorder.cpp
pico_visualizer_pcl/: CMakeLists.txt  pico_visualizer.cpp
transforms/: transform.cpp
(+300 files in other folders)
