cmake_minimum_required(VERSION 3.3 FATAL_ERROR)
project(PCL_ransac)
find_package(PCL 1.10 REQUIRED)
FIND_PACKAGE( Boost 1.71 REQUIRED COMPONENTS thread filesystem)
include_directories(${PCL_INCLUDE_DIRS} ${Boost_INCLUDE_DIR} include)
link_directories(${PCL_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS} bin)
add_definitions(${PCL_DEFINITIONS})
add_executable(PCL_ransac PCL_ransac.cpp)
target_link_libraries(PCL_ransac ${PCL_LIBRARIES} ${Boost_LIBRARIES} libroyale.so)
