cmake_minimum_required(VERSION 3.3 FATAL_ERROR)
project(PICO_Recorder)
FIND_PACKAGE( Boost 1.71 REQUIRED COMPONENTS thread filesystem)
FIND_PACKAGE(Eigen3 REQUIRED)
include_directories(${Boost_INCLUDE_DIR} include)
link_directories(${Boost_LIBRARY_DIRS} bin)
add_executable(pico_recorder src/pico_recorder.cpp src/ArduinoSensorReader.cpp src/transform.cpp)
target_link_libraries(pico_recorder ${Boost_LIBRARIES} libroyale.so Eigen3::Eigen) 