cmake_minimum_required(VERSION 3.3 FATAL_ERROR)
project(PICO_Recorder)
find_package(PCL 1.10 REQUIRED)
FIND_PACKAGE( Boost 1.71 REQUIRED COMPONENTS thread filesystem)
FIND_PACKAGE(Eigen3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS} ${Boost_INCLUDE_DIR} include)
link_directories(${PCL_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS} bin)
add_definitions(${PCL_DEFINITIONS})
add_executable(pico_recorder_no_arduino src/pico_recorder.cpp)
target_link_libraries(pico_recorder_no_arduino ${PCL_LIBRARIES} ${Boost_LIBRARIES} libroyale.so Eigen3::Eigen) 